--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>  
     <h1>DEMO WEBSITE</h1>
     <div>
-        <img src="../DemoImages/download.jpeg" id="wv" alt="">
+        <img src="DemoImages/download.jpeg" id="wv" alt="">
         <img src="../DemoImages/images (1).jpeg" id="nus" alt="">
         <img src="../DemoImages/images (14).jpeg" id="mac" >
         <img src="../DemoImages/images.jpeg" id="tle" >
